--- a/css/ios-calculator.css
+++ b/css/ios-calculator.css
@@ -16,10 +16,35 @@ body {
   border-radius: 50px;
 }
 
+.display1 .previous-display {
+  color: white !important;
+  display: flex;
+  left: 100px;
+  padding-right: 15px;
+  height: 150px;
+  align-items: center;
+  font-size: 1rem;
+  opacity: 0.5;
+}
+
+.display1 .current-display {
+  color: white !important;
+  display: flex;
+  left: 100px;
+  padding-right: 15px;
+  height: 150px;
+  align-items: center;
+  font-size: 2rem;
+}
 .display1 {
   width: 100%;
   border-radius: 30px;
   height: 255px;
+  overflow: hidden;
+  justify-content: space-evenly;
+  display: flex;
+  align-items: end;
+  flex-direction: column;
 }
 
 .rakamlar {
